feat: implement parallel-first then sequential endpoint collection
Configuration Changes (config.ipynb):
- Added SEQUENTIAL_ENDPOINTS list for endpoints with large datasets
- Configured 5 slow endpoints to run sequentially:
  * databricks_job
  * databricks_registered_model
  * databricks_external_location
  * databricks_storage_credential
  * databricks_share

Collection Strategy Changes (api_client.ipynb):
- Split endpoints into parallel and sequential groups
- Phase 1: Process fast endpoints in parallel (MAX_CONCURRENCY=10)
- Phase 2: Process slow endpoints one at a time with clear progress
- Improved logging for sequential phase shows [SEQ N/M] progress

Benefits:
- Fast endpoints complete quickly (~10 seconds for 24 endpoints)
- Slow endpoints get individual attention with visible progress
- No more repetitive stuck messages for large datasets
- Clear visibility: see exactly which large endpoint is running
- Better memory management for endpoints with thousands of records
- Avoids API rate limiting by spacing out large requests

Example Output:
[PARALLEL] Processing 24 fast endpoints with concurrency=10...
[HB] 8s | 24/24 completed
[PARALLEL] ✅ Completed 24 endpoints

[SEQUENTIAL] Now processing 5 large endpoints individually...
[SEQ 1/5] Fetching databricks_job...
[SEQ 1/5] ✅ databricks_job complete (5234 rows)

--- a/api_client.ipynb
+++ b/api_client.ipynb
@@ -232,47 +232,62 @@
     "        timeout = ClientTimeout(total=None, sock_connect=HTTP_TIMEOUT_SEC, sock_read=HTTP_TIMEOUT_SEC)\n",
     "        connector = TCPConnector(limit=MAX_CONCURRENCY, ttl_dns_cache=300)\n",
     "\n",
-    "        endpoints = get_all_endpoints()\n",
+    "        all_endpoints = get_all_endpoints()\n",
+    "        \n",
+    "        # Split into parallel and sequential\n",
+    "        parallel = {k: v for k, v in all_endpoints.items() if k not in SEQUENTIAL_ENDPOINTS}\n",
+    "        sequential = {k: v for k, v in all_endpoints.items() if k in SEQUENTIAL_ENDPOINTS}\n",
     "\n",
     "        async with aiohttp.ClientSession(connector=connector, timeout=timeout) as session:\n",
-    "            task_by_key = {k: asyncio.create_task(self.fetch_one(session, k, v)) for k, v in endpoints.items()}\n",
+    "            \n",
+    "            # Phase 1: Process parallel endpoints first (fast completion)\n",
+    "            if parallel:\n",
+    "                print(f\"[PARALLEL] Processing {len(parallel)} fast endpoints with concurrency={MAX_CONCURRENCY}...\\n\")\n",
+    "                task_by_key = {k: asyncio.create_task(self.fetch_one(session, k, v)) for k, v in parallel.items()}\n",
     "\n",
-    "            async def heartbeat():\n",
-    "                start_time = time.time()\n",
-    "                last_done = 0\n",
-    "                repeat_count = 0\n",
+    "                async def heartbeat():\n",
+    "                    start_time = time.time()\n",
+    "                    last_done = 0\n",
+    "                    repeat_count = 0\n",
+    "                    \n",
+    "                    while True:\n",
+    "                        done = sum(t.done() for t in task_by_key.values())\n",
+    "                        total = len(task_by_key)\n",
+    "                        inflight = [k for k, t in task_by_key.items() if not t.done()]\n",
+    "                        elapsed = int(time.time() - start_time)\n",
+    "                        \n",
+    "                        # Show progress when something changes\n",
+    "                        if done != last_done:\n",
+    "                            print(f\"[HB] {elapsed}s | {done}/{total} completed | Now fetching: {inflight[:3]}\")\n",
+    "                            repeat_count = 0\n",
+    "                            last_done = done\n",
+    "                        else:\n",
+    "                            # Still working on same endpoints - only print periodically\n",
+    "                            repeat_count += 1\n",
+    "                            if repeat_count % 3 == 0:  # Every 15 seconds (if HEARTBEAT_SEC=5)\n",
+    "                                print(f\"[HB] {elapsed}s | Still working: {inflight[:3]} ...\")\n",
+    "                        \n",
+    "                        await asyncio.sleep(HEARTBEAT_SEC)\n",
+    "\n",
+    "                hb = asyncio.create_task(heartbeat())\n",
+    "                results = await asyncio.gather(*task_by_key.values())\n",
+    "                hb.cancel()\n",
+    "\n",
+    "                for key, rows in results:\n",
+    "                    raw[key] = [] if self.enable_streaming_writes else rows\n",
+    "                    counts[key] = len(rows)\n",
     "                \n",
-    "                while True:\n",
-    "                    done = sum(t.done() for t in task_by_key.values())\n",
-    "                    total = len(task_by_key)\n",
-    "                    inflight = [k for k, t in task_by_key.items() if not t.done()]\n",
-    "                    elapsed = int(time.time() - start_time)\n",
-    "                    \n",
-    "                    # Show progress when something changes\n",
-    "                    if done != last_done:\n",
-    "                        print(f\"[HB] {elapsed}s | {done}/{total} completed | Now fetching: {inflight[:3]}\")\n",
-    "                        repeat_count = 0\n",
-    "                        last_done = done\n",
-    "                    else:\n",
-    "                        # Still working on same endpoints - only print periodically\n",
-    "                        repeat_count += 1\n",
-    "                        if repeat_count % 3 == 0:  # Every 15 seconds (if HEARTBEAT_SEC=5)\n",
-    "                            print(f\"[HB] {elapsed}s | Still paginating {len(inflight)} endpoints: {inflight[:3]} ...\")\n",
-    "                    \n",
-    "                    await asyncio.sleep(HEARTBEAT_SEC)\n",
-    "\n",
-    "            hb = asyncio.create_task(heartbeat())\n",
-    "            results = await asyncio.gather(*task_by_key.values())\n",
-    "            hb.cancel()\n",
-    "\n",
-    "        for key, rows in results:\n",
-    "            if self.enable_streaming_writes:\n",
-    "                # Don't accumulate in memory when streaming - data already written to UC\n",
-    "                raw[key] = []\n",
-    "            else:\n",
-    "                # Batch mode - accumulate for writing at the end\n",
-    "                raw[key] = rows\n",
-    "            counts[key] = len(rows)\n",
+    "                print(f\"\\n[PARALLEL] ✅ Completed {len(parallel)} endpoints\\n\")\n",
+    "            \n",
+    "            # Phase 2: Process sequential endpoints one at a time (slow, large datasets)\n",
+    "            if sequential:\n",
+    "                print(f\"[SEQUENTIAL] Now processing {len(sequential)} large endpoints individually...\\n\")\n",
+    "                for idx, (key, cfg) in enumerate(sequential.items(), 1):\n",
+    "                    print(f\"[SEQ {idx}/{len(sequential)}] Fetching {key}...\")\n",
+    "                    result_key, rows = await self.fetch_endpoint(session, key, cfg)\n",
+    "                    raw[result_key] = [] if self.enable_streaming_writes else rows\n",
+    "                    counts[result_key] = len(rows)\n",
+    "                    print(f\"[SEQ {idx}/{len(sequential)}] ✅ {key} complete ({len(rows)} rows)\\n\")\n",
     "\n",
     "        print(\"[Async] Collection complete.\\n\")\n",
     "        return raw, counts\n",
