--- a/config.ipynb
+++ b/config.ipynb
@@ -230,6 +230,18 @@
     "# ====================================================================================\n",
     "# ENDPOINT-SPECIFIC CONFIGURATION\n",
     "# ====================================================================================\n",
+    "\n",
+    "# Endpoints to process sequentially (one at a time) - AFTER parallel phase\n",
+    "# These are typically large endpoints with thousands of records that paginate slowly\n",
+    "# Processing them sequentially provides better visibility and avoids rate limiting\n",
+    "SEQUENTIAL_ENDPOINTS: List[str] = [\n",
+    "    \"databricks_job\",\n",
+    "    \"databricks_registered_model\", \n",
+    "    \"databricks_external_location\",\n",
+    "    \"databricks_storage_credential\",\n",
+    "    \"databricks_share\"\n",
+    "]\n",
+    "\n",
     "# Global pagination controls (can be overridden per endpoint)\n",
     "ENABLE_PAGINATION_BY_DEFAULT = True\n",
     "\n",
