feat: add detailed pagination progress logging
- Show page-by-page progress during pagination (page number, items count, next token preview)
- Only log pages 2+ to reduce noise (page 1 already logged by fetch_endpoint)
- Particularly helpful for sequential endpoints with large datasets
- Example output: '📄 Page 106: 100 items | Next token: CAEo5dXZ8_MyMJijsYG62JEBQAE=...'

--- a/api_client.ipynb
+++ b/api_client.ipynb
@@ -104,7 +104,7 @@
     "        return 429, {}\n",
     "\n",
     "\n",
-    "    async def _paginate(self, session, base_url, cfg) -> List[Dict[str, Any]]:\n",
+    "    async def _paginate(self, session, base_url, cfg, endpoint_key: str = None) -> List[Dict[str, Any]]:\n",
     "        \"\"\"Generic paginator supporting next_page_token/page_token + has_more.\"\"\"\n",
     "        items: List[Dict[str, Any]] = []\n",
     "        params = dict(cfg.get(\"fixed_params\") or {})\n",
@@ -116,13 +116,26 @@
     "        if limit_param and limit_val:\n",
     "            params[limit_param] = limit_val\n",
     "\n",
+    "        page_num = 0\n",
+    "        \n",
     "        while True:\n",
+    "            page_num += 1\n",
     "            status, data = await self._safe_get(session, base_url, params=params)\n",
     "            if status != 200 or not isinstance(data, dict):\n",
     "                break\n",
     "\n",
     "            if list_key and isinstance(data.get(list_key), list):\n",
-    "                items.extend(data[list_key])\n",
+    "                page_items = data[list_key]\n",
+    "                items.extend(page_items)\n",
+    "                \n",
+    "                # Log pagination progress for each page (skip page 1 to reduce noise)\n",
+    "                if VERBOSE_LOG and page_num > 1:\n",
+    "                    nxt = data.get(token_key) if token_key else None\n",
+    "                    if nxt:\n",
+    "                        print(f\"      📄 Page {page_num}: {len(page_items)} items | Next token: {nxt[:30]}...\")\n",
+    "                    else:\n",
+    "                        print(f\"      📄 Page {page_num}: {len(page_items)} items | Last page\")\n",
+    "                        \n",
     "            elif list_key is None:\n",
     "                break  # object/unsupported\n",
     "\n",
@@ -165,7 +178,7 @@
     "\n",
     "        # Paginated path\n",
     "        if cfg.get(\"paginate\", False):\n",
-    "            rows = await self._paginate(session, url, cfg)\n",
+    "            rows = await self._paginate(session, url, cfg, endpoint_key=key)\n",
     "            dt = time.time() - t0\n",
     "            self.log(f\"[Fetch] {key:35} ✅ ({len(rows)})  ← paginated:{cfg.get('list_key')}  [{dt:.1f}s]\")\n",
     "            self._write_raw_data_immediately(key, rows)\n",
