fix: resolve pagination infinite loop and add vector search indexes collection
Critical Fixes:
- Fixed pagination bug causing infinite loops in Jobs API and 16 other endpoints
- Added 'page_param' field to distinguish request parameter from response token
- Updated _paginate() to use page_param for requests, token_key for responses

Pagination Fixes (17 endpoints):
- databricks_job, databricks_alert, databricks_sql_alerts
- databricks_registered_model, databricks_experiment, databricks_model_serving
- databricks_sql_endpoint
- databricks_external_location, databricks_storage_credential, databricks_share
- databricks_recipient, databricks_connection
- databricks_repo, databricks_group
- databricks_vector_search_endpoint, databricks_vector_search_index

New Feature:
- Added fetch_vector_search_indexes() method to collect indexes for all endpoints
- Automatically iterates through all vector search endpoints to fetch their indexes
- Adds _endpoint_name reference to each index for parent relationship
- Supports pagination and streaming writes
- Progress updates every 20 endpoints

Implementation:
- Phase 3 in collect_all_endpoints() now fetches vector search indexes
- Handles both streaming and batch write modes
- Re-fetches endpoints data in streaming mode to access names

--- a/api_client.ipynb
+++ b/api_client.ipynb
@@ -145,7 +145,9 @@
     "\n",
     "            nxt = data.get(token_key) if token_key else None\n",
     "            if nxt:\n",
-    "                params[token_key] = nxt\n",
+    "                # Use page_param for request if defined, otherwise use token_key\n",
+    "                page_param = cfg.get(\"page_param\", token_key)\n",
+    "                params[page_param] = nxt\n",
     "            else:\n",
     "                has_more = data.get(\"has_more\") or data.get(\"has_next_page\") or False\n",
     "                if not has_more:\n",
@@ -171,9 +173,8 @@
     "        t0 = time.time()\n",
     "        url = f\"{self.base_url}{cfg['url']}\"\n",
     "\n",
-    "        # Hard-skip vector indexes unless endpoint_name loops added\n",
+    "        # Skip vector search indexes here - they're collected separately after endpoints\n",
     "        if key == \"databricks_vector_search_index\":\n",
-    "            self.log(\"[VS] Skipping indexes (requires endpoint_name).\")\n",
     "            return key, []\n",
     "\n",
     "        # Paginated path\n",
@@ -234,6 +235,58 @@
     "        \"\"\"Fetch one endpoint with semaphore control.\"\"\"\n",
     "        async with self.semaphore:\n",
     "            return await self.fetch_endpoint(session, key, cfg)\n",
+    "\n",
+    "\n",
+    "    async def fetch_vector_search_indexes(self, session, endpoints_data: List[Dict[str, Any]]) -> List[Dict[str, Any]]:\n",
+    "        \"\"\"Fetch all vector search indexes for all endpoints.\"\"\"\n",
+    "        all_indexes = []\n",
+    "        \n",
+    "        if not endpoints_data:\n",
+    "            return all_indexes\n",
+    "        \n",
+    "        print(f\"\\n[VS] Fetching indexes for {len(endpoints_data)} vector search endpoints...\")\n",
+    "        \n",
+    "        for idx, endpoint in enumerate(endpoints_data, 1):\n",
+    "            endpoint_name = endpoint.get(\"name\")\n",
+    "            if not endpoint_name:\n",
+    "                continue\n",
+    "            \n",
+    "            try:\n",
+    "                url = f\"{self.base_url}/api/2.0/vector-search/indexes\"\n",
+    "                params = {\"endpoint_name\": endpoint_name, \"page_size\": PAGE_SIZE_DEFAULT}\n",
+    "                \n",
+    "                # Paginate through indexes for this endpoint\n",
+    "                page_num = 0\n",
+    "                while True:\n",
+    "                    page_num += 1\n",
+    "                    status, data = await self._safe_get(session, url, params=params)\n",
+    "                    \n",
+    "                    if status != 200 or not isinstance(data, dict):\n",
+    "                        break\n",
+    "                    \n",
+    "                    indexes = data.get(\"vector_indexes\", [])\n",
+    "                    if indexes:\n",
+    "                        # Add parent endpoint reference\n",
+    "                        for idx_item in indexes:\n",
+    "                            idx_item[\"_endpoint_name\"] = endpoint_name\n",
+    "                        all_indexes.extend(indexes)\n",
+    "                    \n",
+    "                    next_token = data.get(\"next_page_token\")\n",
+    "                    if next_token:\n",
+    "                        params[\"page_token\"] = next_token\n",
+    "                    else:\n",
+    "                        break\n",
+    "                \n",
+    "                # Progress update every 20 endpoints\n",
+    "                if idx % 20 == 0 or idx == len(endpoints_data):\n",
+    "                    print(f\"   [VS] Progress: {idx}/{len(endpoints_data)} endpoints processed, {len(all_indexes)} indexes found\")\n",
+    "                    \n",
+    "            except Exception as e:\n",
+    "                if VERBOSE_LOG:\n",
+    "                    self.log(f\"[VS-ERROR] {endpoint_name}: {e}\")\n",
+    "        \n",
+    "        print(f\"[VS] ✅ Found {len(all_indexes)} total indexes across {len(endpoints_data)} endpoints\\n\")\n",
+    "        return all_indexes\n",
     "\n",
     "\n",
     "    async def collect_all_endpoints(self) -> Tuple[Dict[str, List[Dict[str, Any]]], Dict[str, int]]:\n",
@@ -301,6 +354,21 @@
     "                    raw[result_key] = [] if self.enable_streaming_writes else rows\n",
     "                    counts[result_key] = len(rows)\n",
     "                    print(f\"[SEQ {idx}/{len(sequential)}] ✅ {key} complete ({len(rows)} rows)\\n\")\n",
+    "            \n",
+    "            # Phase 3: Fetch vector search indexes (requires endpoints to be collected first)\n",
+    "            if \"databricks_vector_search_endpoint\" in raw and raw.get(\"databricks_vector_search_endpoint\"):\n",
+    "                vs_endpoints = raw[\"databricks_vector_search_endpoint\"]\n",
+    "                if self.enable_streaming_writes:\n",
+    "                    # Need to re-fetch the endpoints data since we emptied it for streaming\n",
+    "                    vs_cfg = all_endpoints.get(\"databricks_vector_search_endpoint\", {})\n",
+    "                    _, vs_endpoints = await self.fetch_endpoint(session, \"databricks_vector_search_endpoint\", vs_cfg)\n",
+    "                \n",
+    "                indexes = await self.fetch_vector_search_indexes(session, vs_endpoints)\n",
+    "                raw[\"databricks_vector_search_index\"] = [] if self.enable_streaming_writes else indexes\n",
+    "                counts[\"databricks_vector_search_index\"] = len(indexes)\n",
+    "                \n",
+    "                if self.enable_streaming_writes and indexes:\n",
+    "                    self._write_raw_data_immediately(\"databricks_vector_search_index\", indexes)\n",
     "\n",
     "        print(\"[Async] Collection complete.\\n\")\n",
     "        return raw, counts\n",
