--- a/endpoints.ipynb
+++ b/endpoints.ipynb
@@ -152,6 +152,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"limit\",\n",
     "        \"limit\": JOBS_PAGE_SIZE,      # API cap = 100\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_pipeline\": {\n",
@@ -165,6 +166,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"limit\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_dashboard\": {  # Lakeview dashboards\n",
@@ -183,6 +185,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": 100,  # MLflow cap\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_experiment\": {\n",
@@ -191,6 +194,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_model_serving\": {\n",
@@ -199,6 +203,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "\n",
@@ -209,6 +214,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": DBSQL_WH_PAGE_SIZE,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_sql_dashboard\": {  # alias to Lakeview; kept for parity\n",
@@ -225,6 +231,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"limit\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "\n",
@@ -240,6 +247,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_storage_credential\": {\n",
@@ -248,6 +256,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_share\": {\n",
@@ -256,6 +265,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_recipient\": {\n",
@@ -264,6 +274,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "\n",
@@ -274,6 +285,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_secret_scope\": {\n",
@@ -287,6 +299,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_connection\": {\n",
@@ -295,6 +308,7 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_credential\": {\n",
@@ -310,14 +324,20 @@
     "        \"paginate\": True,\n",
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
-    "    # Indexes require endpoint_name; we skip heavy scans by default (log+0)\n",
+    "    # Indexes require endpoint_name; collected after endpoints\n",
     "    \"databricks_vector_search_index\": {\n",
     "        \"url\": \"/api/2.0/vector-search/indexes\",\n",
-    "        \"list_key\": None,\n",
-    "        \"paginate\": False,\n",
-    "        \"note\": \"Requires endpoint_name; skipped by default.\"\n",
+    "        \"list_key\": \"vector_indexes\",\n",
+    "        \"paginate\": True,\n",
+    "        \"limit_param\": \"page_size\",\n",
+    "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"requires_parent\": \"databricks_vector_search_endpoint\",\n",
+    "        \"parent_param\": \"endpoint_name\"\n",
     "    },\n",
     "}\n"
    ]
