pushing config changes

--- a/config.ipynb
+++ b/config.ipynb
@@ -89,7 +89,7 @@
     "# HTTP & CONCURRENCY CONFIGURATION\n",
     "# ====================================================================================\n",
     "# ---- Async / concurrency ----\n",
-    "MAX_CONCURRENCY = 10               # aiohttp concurrent in-flight requests (reduced to avoid throttling)\n",
+    "MAX_CONCURRENCY = 2               # aiohttp concurrent in-flight requests (reduced to avoid throttling)\n",
     "HTTP_TIMEOUT_SEC = 60\n",
     "RETRY_DELAY_BASE = 2\n",
     "RETRY_ATTEMPTS = 3\n",
@@ -239,7 +239,16 @@
     "    \"databricks_registered_model\", \n",
     "    \"databricks_external_location\",\n",
     "    \"databricks_storage_credential\",\n",
-    "    \"databricks_share\"\n",
+    "    \"databricks_share\",\n",
+    "    \"databricks_recipient\",\n",
+    "    \"databricks_connection\",\n",
+    "    \"databricks_credential\",\n",
+    "    \"databricks_sql_dashboard\",\n",
+    "    \"databricks_sql_alerts\",\n",
+    "    \"databricks_dashboard\",\n",
+    "    \"databricks_alert\",\n",
+    "    \"databricks_workspace_file\",\n",
+    "    \"databricks_dbfs_file\",\n",
     "]\n",
     "\n",
     "# Global pagination controls (can be overridden per endpoint)\n",
@@ -255,16 +264,16 @@
     "    \"databricks_instance_pool\": None,       # No pagination available\n",
     "    \n",
     "    # --- Workspace / Files ---\n",
-    "    \"databricks_workspace_file\": False,     # Disable - usually too large and not needed in full\n",
-    "    \"databricks_dbfs_file\": False,          # Disable - usually too large and not needed in full\n",
+    "    \"databricks_workspace_file\": True,     # Disable - usually too large and not needed in full\n",
+    "    \"databricks_dbfs_file\": True,          # Disable - usually too large and not needed in full\n",
     "    \"databricks_workspace_conf\": None,      # No pagination available (single object)\n",
     "    \"databricks_global_init_script\": None,  # No pagination available\n",
     "    \n",
     "    # --- Jobs / Pipelines / Alerts / Dashboards ---\n",
     "    \"databricks_job\": True,                # Enable pagination (can be many jobs)\n",
     "    \"databricks_pipeline\": None,            # No pagination available\n",
-    "    \"databricks_alert\": False,              # Enable pagination (can be many alerts)\n",
-    "    \"databricks_dashboard\": False,          # Disable for faster collection (first page usually sufficient)\n",
+    "    \"databricks_alert\": True,              # Enable pagination (can be many alerts)\n",
+    "    \"databricks_dashboard\": True,          # Disable for faster collection (first page usually sufficient)\n",
     "    \n",
     "    # --- MLflow / Serving ---\n",
     "    \"databricks_registered_model\": True,   # Enable pagination (can be many models)\n",
@@ -273,8 +282,8 @@
     "    \n",
     "    # --- DBSQL ---\n",
     "    \"databricks_sql_endpoint\": True,        # Enable pagination (can be many warehouses)\n",
-    "    \"databricks_sql_dashboard\": False,      # Disable for faster collection (alias to databricks_dashboard)\n",
-    "    \"databricks_sql_alerts\": False,         # Enable pagination (alias to databricks_alert)\n",
+    "    \"databricks_sql_dashboard\": True,      # Disable for faster collection (alias to databricks_dashboard)\n",
+    "    \"databricks_sql_alerts\": True,         # Enable pagination (alias to databricks_alert)\n",
     "    \n",
     "    # --- UC / Metastore ---\n",
     "    \"databricks_catalog\": None,             # No pagination available (usually small list)\n",
