--- a/main.ipynb
+++ b/main.ipynb
@@ -315,6 +315,163 @@
     "# Run the main assessment\n",
     "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3eed57be-1484-4fdd-b95b-17b1e31731d6",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Remove All the Tables"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# catalog_name = \"users\"\n",
+    "# schema_name = \"robert_altmiller\"\n",
+    "\n",
+    "# # Get all tables in the catalog and schema\n",
+    "# tables_df = spark.sql(f\"SHOW TABLES IN {catalog_name}.{schema_name}\")\n",
+    "# tables = [row.tableName for row in tables_df.collect()]\n",
+    "\n",
+    "# print(f\"Found {len(tables)} tables in {catalog_name}.{schema_name}\")\n",
+    "\n",
+    "# # Drop all tables\n",
+    "# for t in tables:\n",
+    "#     fqtn = f\"{catalog_name}.{schema_name}.{t}\"\n",
+    "#     print(f\"Dropping {fqtn} ...\")\n",
+    "#     spark.sql(f\"DROP TABLE IF EXISTS {fqtn}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1425f16f-c88b-4f39-a9ae-5d58c813c7ea",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# # test_jobs_pagination.py\n",
+    "# import asyncio\n",
+    "# import aiohttp\n",
+    "# import os\n",
+    "\n",
+    "# async def test_jobs_api_real():\n",
+    "#     \"\"\"\n",
+    "#     Real integration test for Jobs API with pagination.\n",
+    "#     Tests actual API calls to verify pagination works correctly.\n",
+    "#     \"\"\"\n",
+    "    \n",
+    "#     # Get credentials from environment or Databricks context\n",
+    "#     workspace_url = os.getenv(\"DATABRICKS_HOST\", \"e2-demo-field-eng.cloud.databricks.com\")\n",
+    "#     token = os.getenv(\"DATABRICKS_TOKEN\", str(dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiToken().get()))\n",
+    "    \n",
+    "#     if not token:\n",
+    "#         # Try to get from dbutils if running in Databricks\n",
+    "#         try:\n",
+    "#             token = dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiToken().get()\n",
+    "#         except:\n",
+    "#             print(\"❌ No token found. Set DATABRICKS_TOKEN environment variable.\")\n",
+    "#             return\n",
+    "    \n",
+    "#     base_url = f\"https://{workspace_url}\"\n",
+    "#     headers = {\"Authorization\": f\"Bearer {token}\"}\n",
+    "    \n",
+    "#     print(f\"🔗 Testing Jobs API: {base_url}/api/2.2/jobs/list\")\n",
+    "#     print(\"=\"*60)\n",
+    "    \n",
+    "#     all_jobs = []\n",
+    "#     page_num = 0\n",
+    "#     params = {\"limit\": 100}  # Use smaller limit to force pagination\n",
+    "    \n",
+    "#     async with aiohttp.ClientSession() as session:\n",
+    "#         while True:\n",
+    "#             page_num += 1\n",
+    "#             print(f\"\\n📄 Fetching page {page_num}...\")\n",
+    "            \n",
+    "#             async with session.get(\n",
+    "#                 f\"{base_url}/api/2.2/jobs/list\",\n",
+    "#                 headers=headers,\n",
+    "#                 params=params,\n",
+    "#                 timeout=aiohttp.ClientTimeout(total=60)\n",
+    "#             ) as resp:\n",
+    "#                 if resp.status != 200:\n",
+    "#                     print(f\"❌ Error: {resp.status} - {await resp.text()}\")\n",
+    "#                     break\n",
+    "                \n",
+    "#                 data = await resp.json()\n",
+    "#                 jobs = data.get(\"jobs\", [])\n",
+    "#                 next_token = data.get(\"next_page_token\")\n",
+    "                \n",
+    "#                 print(f\"   ✅ Got {len(jobs)} jobs\")\n",
+    "#                 if next_token:\n",
+    "#                     print(f\"   🔗 Next token: {next_token[:30]}...\")\n",
+    "                \n",
+    "#                 all_jobs.extend(jobs)\n",
+    "                \n",
+    "#                 # Continue pagination\n",
+    "#                 if next_token:\n",
+    "#                     params[\"page_token\"] = next_token\n",
+    "#                 else:\n",
+    "#                     print(f\"\\n   ℹ️  No more pages\")\n",
+    "#                     break\n",
+    "                \n",
+    "#                 # Safety limit\n",
+    "#                 # if page_num >= 10:\n",
+    "#                 #     print(f\"\\n   ⚠️  Stopping at page {page_num} (safety limit)\")\n",
+    "#                 #     break\n",
+    "    \n",
+    "#     print(\"\\n\" + \"=\"*60)\n",
+    "#     print(f\"✅ Test complete!\")\n",
+    "#     print(f\"   Total pages fetched: {page_num}\")\n",
+    "#     print(f\"   Total jobs collected: {len(all_jobs)}\")\n",
+    "    \n",
+    "#     if all_jobs:\n",
+    "#         print(f\"\\n📋 Sample jobs:\")\n",
+    "#         for job in all_jobs[:3]:\n",
+    "#             print(f\"   - {job.get('job_id')}: {job.get('settings', {}).get('name', 'N/A')}\")\n",
+    "    \n",
+    "#     return all_jobs\n",
+    "\n",
+    "\n",
+    "# jobs = asyncio.run(test_jobs_api_real())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9b5a7641-c8a1-433d-8799-ba67ec70e914",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
