fix: vector search indexes not collected in streaming mode
Bug: When ENABLE_STREAMING_WRITES=True, Phase 3 (vector search indexes)
never executed because raw['databricks_vector_search_endpoint'] was set to []
after streaming write, and empty list is falsy.

Fix:
- Check counts dict instead of raw dict (counts has actual count, not [])
- Always re-fetch endpoints data to get endpoint names
- Simplified conditional logic

Result: Vector search indexes will now be collected properly in streaming mode

--- a/api_client.ipynb
+++ b/api_client.ipynb
@@ -356,12 +356,10 @@
     "                    print(f\"[SEQ {idx}/{len(sequential)}] ✅ {key} complete ({len(rows)} rows)\\n\")\n",
     "            \n",
     "            # Phase 3: Fetch vector search indexes (requires endpoints to be collected first)\n",
-    "            if \"databricks_vector_search_endpoint\" in raw and raw.get(\"databricks_vector_search_endpoint\"):\n",
-    "                vs_endpoints = raw[\"databricks_vector_search_endpoint\"]\n",
-    "                if self.enable_streaming_writes:\n",
-    "                    # Need to re-fetch the endpoints data since we emptied it for streaming\n",
-    "                    vs_cfg = all_endpoints.get(\"databricks_vector_search_endpoint\", {})\n",
-    "                    _, vs_endpoints = await self.fetch_endpoint(session, \"databricks_vector_search_endpoint\", vs_cfg)\n",
+    "            if \"databricks_vector_search_endpoint\" in counts and counts.get(\"databricks_vector_search_endpoint\", 0) > 0:\n",
+    "                # Always re-fetch endpoints data since we need the endpoint names\n",
+    "                vs_cfg = all_endpoints.get(\"databricks_vector_search_endpoint\", {})\n",
+    "                _, vs_endpoints = await self.fetch_endpoint(session, \"databricks_vector_search_endpoint\", vs_cfg)\n",
     "                \n",
     "                indexes = await self.fetch_vector_search_indexes(session, vs_endpoints)\n",
     "                raw[\"databricks_vector_search_index\"] = [] if self.enable_streaming_writes else indexes\n",
