fix: Lakeview dashboards pagination not working
Bug: databricks_dashboard and databricks_sql_dashboard endpoints were
missing 'page_param' field, causing pagination to stop after first page (20 items).

Root Cause: Lakeview API uses 'page_token' for BOTH:
- Request parameter (to get next page)
- Response field (returned by API)

Without explicit page_param, the fallback wasn't working correctly.

Fix: Added explicit 'page_param: page_token' to both dashboard endpoints

Result: All Lakeview dashboards will now be collected with proper pagination

--- a/endpoints.ipynb
+++ b/endpoints.ipynb
@@ -175,6 +175,7 @@
     "        \"paginate\": True,  # Can be overridden by ENDPOINT_PAGINATION_OVERRIDES\n",
     "        \"limit_param\": \"limit\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"page_token\"\n",
     "    },\n",
     "\n",
@@ -223,6 +224,7 @@
     "        \"paginate\": True,  # Can be overridden by ENDPOINT_PAGINATION_OVERRIDES\n",
     "        \"limit_param\": \"limit\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"page_token\"\n",
     "    },\n",
     "    \"databricks_sql_alerts\": {     # alias for alerts\n",
