--- a/endpoints.ipynb
+++ b/endpoints.ipynb
@@ -104,7 +104,11 @@
     "    \"databricks_cluster\": {\n",
     "        \"url\": \"/api/2.2/clusters/list\",\n",
     "        \"list_key\": \"clusters\",\n",
-    "        \"paginate\": False\n",
+    "        \"paginate\": True,\n",
+    "        \"limit_param\": \"page_size\",\n",
+    "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"page_param\": \"page_token\",\n",
+    "        \"token_key\": \"next_page_token\"\n",
     "    },\n",
     "    \"databricks_cluster_policy\": {\n",
     "        \"url\": \"/api/2.0/policies/clusters/list\",\n",
